[package]

name = "glutin_window"
version = "0.0.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
tags = []

[lib]

name = "glutin_window"
path = "src/lib.rs"

[dependencies.glutin]

git = "https://github.com/tomaka/glutin"

[dependencies.event]

git = "https://github.com/PistonDevelopers/event"

